new status topic key values response working.
