# src/models/InferenceSSESubject.ts
@@ -1,12 +1,14 @@
 import { Subject } from "rxjs";
 import { uuid, wait } from '../utils/utils';
 import { AiStatusUpdate } from './api/conversationApiModels';
+import { StatusTopics } from './api/StatusTopics';
 
 /**
  * A class used in conjunction with nextjs SSE to stream communications back to the client.
  */
 export default class InferenceSSESubject{
   private readonly subject = new Subject<string>();
+  private readonly statusTopics = new StatusTopics();
   constructor() {}
 
   sendText(text: string){
@@ -17,6 +19,11 @@ export default class InferenceSSESubject{
   sendStatus(aiStatusUpdate: AiStatusUpdate){
     aiStatusUpdate.topicId = aiStatusUpdate.topicId ? aiStatusUpdate.topicId : uuid();
     aiStatusUpdate.date = aiStatusUpdate.date ? aiStatusUpdate.date : Date.now();
+
+    this.statusTopics.addAiStatusUpdate(aiStatusUpdate);
+    const statusTopicsSignal =  JSON.stringify({statusTopics: {statusTopicsKeyValues:  this.statusTopics.statusTopicsKeyValues}});
+    this.subject.next(statusTopicsSignal);
+
     const statusSignal = JSON.stringify({ status: aiStatusUpdate });
     this.subject.next(statusSignal);
   }
